# PDAJ-2021

./: README.md
project/: Dockerfile  pyproject.toml  results.docx  results.txt  run_django.sh
project/algorithms/generators/: Dockerfile  generators.py
project/algorithms/list_comprehension/: display_results.py
project/algorithms/multiprocessing/: multiprocessing.py
project/algorithms/sequential/: sequential.py
project/generators/: generators.py
project/list_comprehension/: Dockerfile  list_comprehension.py
project/pdaj_project/: manage.py
project/pdaj_project/algorithms/: mltprocessing.py
project/pdaj_project/calculations/: views.py
project/pdaj_project/pdaj_project/: asgi.py  settings.py  urls.py  wsgi.py
project/sequential/: Dockerfile  sequential.py
vezbe_11_13/: generator.py  prime_numbers.py
vezbe_11_20/: iter.py  main.py  pyproject.toml  zadatak_1.py
vezbe_11_27/: pyproject.toml
vezbe_11_27/multiprocessing/: main.py  primes.py  primes_results.txt  time.py
vezbe_12_04/: Dockerfile  pyproject.toml
vezbe_12_04/MPI/: main.py  pyproject.toml
vezbe_12_18/: Vagrantfile  docker_install.sh
