[tool.poetry]
name = "vezbe_12_04"
version = "0.1.0"
description = ""
authors = ["Vanja Stepanoski <vanja.stepanoski@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
